Name:                Adventure
Version:             0.1
Synopsis:            A haskell version of the classical game Adventure
License:             GPL-3
License-file:        LICENSE
Author:              Federico Squartini
Maintainer:          federico.squartini@googlemail.com
-- Copyright:
Stability:           Provisional
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2


Executable Adventure
           ghc-options:    -Wall -O2
           Hs-Source-Dirs: src
           Main-is:        Adventure.lhs
           Other-modules:  Actions
                           Instructions
                           Locations
                           Motions
                           Messages
                           Objects
                           Vocabulary
           Build-depends: base,containers